deletet link to footer

--- a/common.header-menu.partial.html
+++ b/common.header-menu.partial.html
@@ -48,8 +48,7 @@
                     </a>
                 </li>
                 <li class="header__menu-item">
-                    <!--added "#footer" to test this function -->
-                    <a href="#footer" class="header__menu-link">
+                    <a href="#" class="header__menu-link">
                         CONTACTS
                     </a>
                 </li>
