deleted test width footer id from index.html

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -56,13 +57,9 @@
     </section>
   </main>
 
-  <footer id="footer">
-    <!--added "#footer" to test this function on header-->
+  <footer>
     <!--Блок 13 | Берчак Андрій -->
-    <footer
-      data-hx-trigger="load"
-      data-hx-swap="outerHTML"
-      data-hx-get="common.footer.partial.html"
-    ></footer>
-  </body>
+    <footer data-hx-trigger="load" data-hx-swap="outerHTML" data-hx-get="common.footer.partial.html"></footer>
+</body>
+
 </html>
