fixed header in the section partners

--- a/about_us.section-our_partners.partial.html
+++ b/about_us.section-our_partners.partial.html
@@ -8,13 +8,13 @@
 </head>
 
 <body>
-    <section class="our_partners>
-        <header class=" our_partners-header">
-        <h1" class="our_partners_header-title"> <b>~PARTNERS~</b> </h1>
+    <div class="our_partners>
+        <header class="our_partners_header">
+            <h1" class="our_partners_header-title"> <b>~PARTNERS~</b> </h1>
             <p class="our_partners-header-main_text">Our lovely <em>Partners</em> <span
                     class="our_team-header-main_text-span">.</span></p>
             <p class="our_partners-header-description">We work with a variety of brands and shops.</p>
-            </header>
+        </header>
             <div class="images_container">
                 <div class="block_of_image">
                     <div class="wide_and_dine">
@@ -57,7 +57,7 @@
                 </div>
             </div>
             <footer></footer>
-    </section>
+    </div>
 
 </body>
 
