was styled the header of section "our team"

--- a/about_us.section-our_team.partial.html
+++ b/about_us.section-our_team.partial.html
@@ -6,11 +6,11 @@
     <title>Document</title>
 </head>
 <body>
-    <section>
-        <header>
-            <h1>~OUR TEAM~</h1>
-            <p>Meet Our <span>Professional</span> Team.</p>
-            <p>Our team is our proud. Each of the team members is dedicated to creating the finest wines.</p>
+    <section class="our_team">
+        <header class="our_team-header">
+            <h1 class="our_team-header-heading_text">~OUR TEAM~</h1>
+            <p class="our_team-header-main_text">Meet Our <em>Professional</em> Team.</p>
+            <p class="our_team-header-description">Our team is our proud. Each of the team members is dedicated to creating the finest wines.</p>
         </header>
     </section>
 </body>
