section about John Smith was made

--- a/about_us.section-our_team.partial.html
+++ b/about_us.section-our_team.partial.html
@@ -10,8 +10,19 @@
         <header class="our_team-header">
             <h1 class="our_team-header-heading_text">~OUR TEAM~</h1>
             <p class="our_team-header-main_text">Meet Our <em>Professional</em> Team.</p>
-            <p class="our_team-header-description">Our team is our proud. Each of the team members is dedicated to creating the finest wines.</p>
+            <p class="description">Our team is our proud. Each of the team members is dedicated to creating the finest wines.</p>
         </header>
+        <div class="our_team-content">
+            <div class="first_colomn">
+                <div class="john_smith_image">
+                    <img src="img/img_about_us_our_team/John_Smith.jpg" alt="">
+                </div>
+                <p class="proffesion"> <em>Discoverer</em> </p>
+                <p class="name_surname"><em>John Smith</em></p>
+                <p class="description">John Smith opened his interest in wine more than fourteen years ago working at a farm and in a wine bar. 
+                </p>
+            </div>
+        </div>
     </section>
 </body>
 </html>
