--- a/common.header-address.partial.html
+++ b/common.header-address.partial.html
@@ -10,21 +10,11 @@
 <body>
     <address class="address">
         <div class="address__phone">
-            <p>
-                <span>
-                    <b>Call:</b> <a href="#">
-                        <div class="address__number">+ 1 (234) 567 89 00</div>
-                    </a>
-                </span>
-            </p>
+            <b>Call: </b><a href="#" class="address__number">+ 1 (234) 567 89 00</a>
         </div>
 
         <div class="address__post">
-            <p>
-                <span>
-                    <b>Visit Us:</b> 121 Pickle Road #97 Austin
-                </span>
-            </p>
+            <span class="address__visit">Visit Us:</span><p>121 Pickle Road #97 Austin
         </div>
     </address>
 </body>
