header v.1.1 - changed background img and logo

--- a/common.header-menu.partial.html
+++ b/common.header-menu.partial.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <nav class="header__menu" style="background-color: aqua;">
+    <nav class="header__menu">
         <div class="header__wrapper-list">
             <ul class="header__list">
                 <li class="header__menu-item">
