--- a/index.header-welcomepage.partial.html
+++ b/index.header-welcomepage.partial.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <div style="background-color: aqua;" class="header__welcome-text">
+    <div class="header__welcome-text">
         <div>
             <p>
             <h1>
