added test header menu

--- a/common.header-menu.partial.html
+++ b/common.header-menu.partial.html
@@ -10,23 +10,23 @@
 <body>
     <nav class="header__menu">
         <div class="header__wrapper-list">
-            <ul class="header__list">
-                <li class="header__menu-item">
+            <div class="header__menu-list">
+                <div class="header__menu-item">
                     <a href="about_us.html" class="header__menu-link">
                         ABOUT US
                     </a>
-                </li>
-                <li class="header__menu-item">
+                </div>
+                <div class="header__menu-item">
                     <a href="#" class="header__menu-link">
                         DISTRIBUTION
                     </a>
-                </li>
-                <li class="header__menu-item">
+                </div>
+                <div class="header__menu-item">
                     <a href="collection.html" class="header__menu-link">
                         COLLECTION
                     </a>
-                </li>
-            </ul>
+                </div>
+            </div>
         </div>
 
         <div class="header__main-logo">
@@ -36,27 +36,25 @@
         </div>
 
         <div class="header__wrapper-list">
-            <ul class="header__menu-list">
-                <li class="header__menu-item">
+            <div class="header__menu-list">
+                <div class="header__menu-item">
                     <a href="#" class="header__menu-link">
                         TESTING
                     </a>
-                </li>
-                <li class="header__menu-item">
+                </div>
+                <div class="header__menu-item">
                     <a href="wineclub.html" class="header__menu-link">
                         WINE CLUB
                     </a>
-                </li>
-                <li class="header__menu-item">
+                </div>
+                <div class="header__menu-item">
                     <a href="#" class="header__menu-link">
                         CONTACTS
                     </a>
-                </li>
-            </ul>
-
+                </div>
+            </div>
         </div>
     </nav>
-
 </body>
 
 </html>
