modified welcome page, test version

--- a/index.header-welcomepage.partial.html
+++ b/index.header-welcomepage.partial.html
@@ -8,25 +8,17 @@
 </head>
 
 <body>
-    <div class="header__welcome-text">
+    <div class="welcome-text">
         <div>
-            <p>
-            <h1>
-                <span>~ WELCOME TO PINOT NOIR ~</span>
-            </h1>
-            </p>
+            <h1 class="welcome-text__main">~ WELCOME TO PINOT NOIR ~</h1>
         </div>
 
-        <div class="header__wish-text">
-            <p>
-                <span>Enjoy the Taste of Summer!</span>
-            </p>
+        <div class="welcome-text__wish">
+            <span class="welcome-text__enjoy">Enjoy the Taste of Summer!</span>
         </div>
 
-        <div class="header__invitation-text">
-            <p>
-                <span>Visit our winery and taste our perfect wines.</span>
-            </p>
+        <div class="welcome-text__invitation">
+            <span class="welcome-text__invitation-visit">Visit our winery and taste our perfect wines.</span>
         </div>
 
         <div class="header__card">
