modified cards on welcome page, test version

--- a/index.header-welcomepage.partial.html
+++ b/index.header-welcomepage.partial.html
@@ -21,28 +21,28 @@
             <span class="welcome-text__invitation-visit">Visit our winery and taste our perfect wines.</span>
         </div>
 
-        <div class="header__card">
-            <div class="header__card-item">
-                <a href="#">Vineyard →</a>
-                <p><span>Visit us & take a tour.</span></p>
+        <div class="header-card">
+            <div class="header-card__item">
+                <a href="#" class="header-card__item-link">Vineyard →</a>
+                <p class="header-card__item-text">Visit us & take a tour.</p>
                 <div class="white__underline"></div>
             </div>
 
-            <div class="header__card-item">
-                <a href="#">Products →</a>
-                <p><span>Buy the best wines.</span></p>
+            <div class="header-card__item">
+                <a href="#" class="header-card__item-link">Products →</a>
+                <p class="header-card__item-text">Buy the best wines.</p>
                 <div class="white__underline"></div>
             </div>
 
-            <div class="header__card-item">
-                <a href="#">History →</a>
-                <p><span>Learn more about our winery.</span></p>
+            <div class="header-card__item">
+                <a href="#" class="header-card__item-link">History →</a>
+                <p class="header-card__item-text">Learn more about our winery.</p>
                 <div class="white__underline"></div>
             </div>
 
-            <div class="header__card-item">
-                <a href="#">Cellars →</a>
-                <p><span>Discover our cellars.</span></p>
+            <div class="header-card__item">
+                <a href="#" class="header-card__item-link">Cellars →</a>
+                <p class="header-card__item-text">Discover our cellars.</p>
                 <div class="white__underline"></div>
             </div>
         </div>
