delete class tag body

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     crossorigin="anonymous"></script>
 </head>
 
-<body class="container">
+<body>
   <!--Блок 1-2 | Юля Данілевич-->
   <header class="header">
     <address class="header__address" data-hx-trigger="load" data-hx-swap="outerHTML"
