--- a/index.section-categories.partial.html
+++ b/index.section-categories.partial.html
@@ -25,6 +25,10 @@
                         and the aging process, wines can vary greatly in taste, texture, and aroma. Taste different
                         wines and select your favorite ones!</p>
                 </div>
+             <!--   <div class="categories__image">
+                    <img src="img/img_section-categories/categories-wallper.png" alt="Categories Wallpaper"
+                        class="categories__image-img">
+                </div> -->
             </div>
         </div>
         <div class="section-categories__items">
