maded section header for "about_us" and was uploaded backgrounf image

--- a/about_us.html
+++ b/about_us.html
@@ -22,6 +22,8 @@
     <address class="header__address" data-hx-trigger="load" data-hx-swap="outerHTML" data-hx-get="common.header-address.partial.html"></address>
 
     <nav class="header__menu" data-hx-trigger="load" data-hx-swap="outerHTML" data-hx-get="common.header-menu.partial.html"></nav>
+    <div class="about_us-header_page" data-hx-trigger="load" data-hx-swap="outerHTML" data-hx-get="about_us-header-page.html">
+    </div>
   </header>
     <!-- Блок 5 | Граматович Олександр-->
   <section 
