update file wineclub.main....

--- a/wineclub.main-howitworks.partial.html
+++ b/wineclub.main-howitworks.partial.html
@@ -69,7 +69,77 @@
         </div>
         <!--Блок з фото (Доробити)-->
         <div>
-            
+            <!--Блок 1 фото-->
+            <div>
+                <div>
+                    <img src="/img/img_wineclub_section/SignatureClub.png" alt="SignatureClub">
+                </div>
+                <p>
+                    <span>Signature Club</span>
+                </p>
+                <p>
+                    <span>Shipments:</span>
+                    <span>March & October</span>
+                </p>
+                <p>
+                    <span>
+                        Priority access to limited winery only artisan wines. Limited production wines only available to Luxury and Vintage Club members.
+                    </span>
+                </p>
+                <div>
+                    <a href="/contact_us.html">
+                        <span>Join Club</span>
+                    </a>
+                </div>
+            </div>
+            <!--Блок 2 фото-->
+            <div>
+                <div>
+                    <img src="/img/img_wineclub_section/TastingClub.png" alt="SignatureClub">
+                </div>
+                <p>
+                    <span>Tasting Club</span>
+                </p>
+                <p>
+                    <span>Shipments:</span>
+                    <span>February, April, June, August.</span>
+                </p>
+                <p>
+                    <span>
+                        Six complimentary wine tastings per year for our guests and their friends. Preferred pricing on all winery events and any experiences.
+                    </span>
+                </p>
+                <div>
+                    <a href="/contact_us.html">
+                        <span>Join Club</span>
+                    </a>
+                </div>
+            <div>
+
+            </div>
+            <!--Блок 3 фото-->
+            <div>
+                <div>
+                    <img src="/img/img_wineclub_section/VintageClub.png" alt="SignatureClub">
+                </div>
+                <p>
+                    <span>Vintage Club</span>
+                </p>
+                <p>
+                    <span>Shipments:</span>
+                    <span>March & October</span>
+                </p>
+                <p>
+                    <span>
+                        Two complimentary wine & food pairings annually. Two complimentary vineyard tours annually (offered seasonally).
+                    </span>
+                </p>
+                <div>
+                    <a href="/contact_us.html">
+                        <span>Join Club</span>
+                    </a>
+                </div>
+            </div>
         </div>
         
     </div>
