--- a/index.header-welcomepage.partial.html
+++ b/index.header-welcomepage.partial.html
@@ -23,13 +23,13 @@
 
         <div class="header-card">
             <div class="header-card__item">
-                <a href="#" class="header-card__item-link">Vineyard →</a>
+                <a href="index.section-our-vineyards.partial.html" class="header-card__item-link">Vineyard →</a>
                 <p class="header-card__item-text">Visit us & take a tour.</p>
                 <div class="white__underline"></div>
             </div>
 
             <div class="header-card__item">
-                <a href="#" class="header-card__item-link">Products →</a>
+                <a href="index.section-gourman-choice.partial.html" class="header-card__item-link">Products →</a>
                 <p class="header-card__item-text">Buy the best wines.</p>
                 <div class="white__underline"></div>
             </div>
@@ -41,7 +41,7 @@
             </div>
 
             <div class="header-card__item">
-                <a href="#" class="header-card__item-link">Cellars →</a>
+                <a href="contact_us.header-hero.partial.html" class="header-card__item-link">Cellars →</a>
                 <p class="header-card__item-text">Discover our cellars.</p>
                 <div class="white__underline"></div>
             </div>
