test to modify links in welcome-text block

--- a/index.header-welcomepage.partial.html
+++ b/index.header-welcomepage.partial.html
@@ -23,25 +23,25 @@
 
         <div class="header-card">
             <div class="header-card__item">
-                <a href="index.section-our-vineyards.partial.html" class="header-card__item-link">Vineyard →</a>
+                <a href="index.section-our-vineyards.partial.html" class="header-card__item-link"><p class="header-card__item-child">Vineyard</p></a>
                 <p class="header-card__item-text">Visit us & take a tour.</p>
                 <div class="white__underline"></div>
             </div>
 
             <div class="header-card__item">
-                <a href="index.section-gourman-choice.partial.html" class="header-card__item-link">Products →</a>
+                <a href="index.section-gourman-choice.partial.html" class="header-card__item-link"><p class="header-card__item-child">Products</p></a>
                 <p class="header-card__item-text">Buy the best wines.</p>
                 <div class="white__underline"></div>
             </div>
 
             <div class="header-card__item">
-                <a href="#" class="header-card__item-link">History →</a>
+                <a href="#" class="header-card__item-link"><p class="header-card__item-child">History</p></a>
                 <p class="header-card__item-text">Learn more about our winery.</p>
                 <div class="white__underline"></div>
             </div>
 
             <div class="header-card__item">
-                <a href="contact_us.header-hero.partial.html" class="header-card__item-link">Cellars →</a>
+                <a href="contact_us.header-hero.partial.html" class="header-card__item-link"><p class="header-card__item-child">Cellars</p></a>
                 <p class="header-card__item-text">Discover our cellars.</p>
                 <div class="white__underline"></div>
             </div>
