add css style for come-vist-us and bit wineclub.get-your-membrship...

--- a/wineclub.html
+++ b/wineclub.html
@@ -21,6 +21,7 @@
     </header>
     <main>
         <div data-hx-trigger="load" data-hx-swap="outerHTML" data-hx-get="wineclub.main-howitworks.partial.html"></div>
+        <section data-hx-trigger="load" data-hx-swap="outerHTML" data-hx-get="wineclub.get-your-membership-right-now.partial.html"></section>
     </main>
     <footer>
 
