add css style and media query

--- a/index.section-benefits.partial.html
+++ b/index.section-benefits.partial.html
@@ -20,29 +20,39 @@
                     or a classic vintage for your cellar, our winery in Austin has something for everyone.</p>
                 <div class="benefits__feature">
                     <img src="img/img_section_benefits/img-Best_Varieties.svg" alt="image wine" class="benefits__feature-image">
-                    <h3 class="benefits__feature-title"><em>The Best Varieties</em></h3>
-                    <p class="benefits__feature-description">Our winemakers select the best grape varieties to create the
+                    <div class="benefits__feature-text">
+                        <h3 class="benefits__feature-title"><em>The Best Varieties</em></h3>
+                        <p class="benefits__feature-description">Our winemakers select the best grape varieties to create the
                         perfect bottles of wine for you to enjoy.</p>
+                    </div>
                 </div>
                 <div class="benefits__feature">
                     <img src="img/img_section_benefits/img-Authentic_Wines.svg" alt="image of barrels" class="benefits__feature-image">
-                    <h3 class="benefits__feature-title"><em>Authentic Wines</em></h3>
-                    <p class="benefits__feature-description">All our wines have excise stamps and certificates of
+                    <div class="benefits__feature-text">
+                        <h3 class="benefits__feature-title"><em>Authentic Wines</em></h3>
+                        <p class="benefits__feature-description">All our wines have excise stamps and certificates of
                         authenticity. We are proud for each bottle of Pino Noir wine.</p>
+                    </div>
                 </div>
                 <div class="benefits__feature">
                     <img src="img/img_section_benefits/img-Native_Yeasts.svg" alt="image of grapes" class="benefits__feature-image">
-                    <h3 class="benefits__feature-title"><em>Native Yeasts</em></h3>
-                    <p class="benefits__feature-description">Our wine experts rely on yeasts naturally found on grape skins
+                    <div class="benefits__feature-text">
+                        <h3 class="benefits__feature-title"><em>Native Yeasts</em></h3>
+                        <p class="benefits__feature-description">Our wine experts rely on yeasts naturally found on grape skins
                         and in the local air to ferment the juice.</p>
+                    </div>
                 </div>
             </div>
         </div>
         <div class="vineyard-tours">
-            <p class="vineyard-tours__description">Vineyard Tours to One of The <em>Oldest Wineries</em> in the USA.</p>
-            <p class="vineyard-tours__text">Visit our vineyards to experience a breathtaking view along with a deep
+            <div class="vineyard-tours__content">
+                <p class="vineyard-tours__description">Vineyard Tours to One of The <em>Oldest Wineries</em> in the USA.</p>
+                <p class="vineyard-tours__text">Visit our vineyards to experience a breathtaking view along with a deep
                 dive in the winemaking industry.</p>
-            <button class="vineyard-tours__button">Sign Up Now</button>
+            </div>
+            <div class="vineyard-tours__button-container">
+                <button class="vineyard-tours__button">Sign Up Now</button>
+            </div>
         </div>
     </section>
 </body>
