Added content to guorman choise section

--- a/index.section-gourman-choice.partial.html
+++ b/index.section-gourman-choice.partial.html
@@ -1,10 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
 <body>
+    <section class="section-gourmand-choice">
+        <div class="section-gourmand-choice__container">
+            <h2 class="section-gourmand-choice__title">~ GOURMAND CHOICE ~</h2>
+            <p class="section-gourmand-choice__description">Experience the Luxury of Wines Aged Since 1999.</p>
+            <p class="section-gourmand-choice__text">Have a sip of our vintage wines. Sign up for a tasting or order delivery.</p>
+            <p class="section-gourmand-choice__text">From the dry and mineral whites to the robust and complex reds, the winery's range of wines showcases the best of the region. Each bottle is crafted with passion and care. </p>    
+        </div>
+        <div class="section-gourmand-choice__roller">
+            <img width="30" src="img/img_section_gourman_choise/arrow_left.svg" alt="Arrow left">
+            <article class="section-gourmand-choice__roller-slides">
+                <div class="section-gourmand-choice__roller-slide">
+                    <img src="img/img_section_gourman_choise/eiswein-wine.png" alt="Eiswein wine">
+                    <h3 class="section-gourmand-choice__roller-slide-title">EISWEIN</h3>
+                    <p class="section-gourmand-choice__roller-slide-description">Dessert wine</p>
+                </div>
+            </article>
+            <article class="section-gourmand-choice__roller-slides">
+                <div class="section-gourmand-choice__roller-slide">
+                    <img src="img/img_section_gourman_choise/grenache-rose-wine.png" alt="Grenache rose wine">
+                    <h3 class="section-gourmand-choice__roller-slide-title">GRENACHE ROSE</h3>
+                    <p class="section-gourmand-choice__roller-slide-description">Vintage wine(2000)</p>
+                </div>
+            </article>
+            <article class="section-gourmand-choice__roller-slides">
+                <div class="section-gourmand-choice__roller-slide">
+                    <img src="img/img_section_gourman_choise/pinot-noir-wine.png" alt="Pinot noir wine">
+                    <h3 class="section-gourmand-choice__roller-slide-title">PINOT NOIR</h3>
+                    <p class="section-gourmand-choice__roller-slide-description">Vintage wine(1999)</p>
+                </div>
+            </article>
+            <article class="section-gourmand-choice__roller-slides">
+                <div class="section-gourmand-choice__roller-slide">
+                    <img src="img/img_section_gourman_choise/port-wine.png" alt="Pornt wine">
+                    <h3 class="section-gourmand-choice__roller-slide-title">PORT WINE</h3>
+                    <p class="section-gourmand-choice__roller-slide-description">Forfield wine</p>
+                </div>
+            </article>
+            <img width="30" src="img/img_section_gourman_choise/arrow_right.svg" alt="Arrow right">
+        </div>
+    </section>
 </body>
+
 </html>
