--- a/index.section-about-us.partial.html
+++ b/index.section-about-us.partial.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,7 +12,10 @@
             <div class="section-about-us__content">
                 <h2 class="section-about-us__title">~ ABOUT US ~</h2>
                 <p class="section-about-us__description">Wine is Poetry in a Bottle. Discover Our Wines.</p>
-                <p class="section-about-us__text">Our artisan winery located in Austin, Texas is committed to producing delicious, interesting, well-balanced wines with the complexity of flavors. Fruits from each vintage tell the story of the season. We're dedicated to supporting sustainably farmed, terroir expressive vineyards.</p>
+                <p class="section-about-us__text">Our artisan winery located in Austin, Texas is committed to producing
+                    delicious, interesting, well-balanced wines with the complexity of flavors. Fruits from each vintage
+                    tell the story of the season. We're dedicated to supporting sustainably farmed, terroir expressive
+                    vineyards.</p>
             </div>
             <div class="section-about-us__info">
                 <p class="section-about-us__fact">15.000</p>
@@ -31,4 +35,5 @@
         </div>
     </section>
 </body>
+
 </html>
