Added content to contact  us

--- a/contact_us.html
+++ b/contact_us.html
@@ -23,6 +23,12 @@
     data-hx-swap="outerHTML"
     data-hx-get="contact_us.header-hero.partial.html"
       ></div>
+    <!--Блок 2-3| Каліберда Сергій-->
+    <div
+    data-hx-trigger="load"
+    data-hx-swap="outerHTML"
+    data-hx-get="contact_us.section-visit_us.partial.html"
+      ></div>
      <!--Блок 4| Гриців Альбіна-->
     <section
       data-hx-trigger="load"
