--- a/index.section-about-us.partial.html
+++ b/index.section-about-us.partial.html
@@ -1,39 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
+  </head>
+  <body>
     <section class="section-about-us">
-        <div class="section-about-us__contaiber">
-            <div class="section-about-us__content">
-                <h2 class="section-about-us__title">~ ABOUT US ~</h2>
-                <p class="section-about-us__description">Wine is Poetry in a Bottle. Discover Our Wines.</p>
-                <p class="section-about-us__text">Our artisan winery located in Austin, Texas is committed to producing
-                    delicious, interesting, well-balanced wines with the complexity of flavors. Fruits from each vintage
-                    tell the story of the season. We're dedicated to supporting sustainably farmed, terroir expressive
-                    vineyards.</p>
-            </div>
-            <div class="section-about-us__info">
-                <p class="section-about-us__fact">15.000</p>
-                <p class="section-about-us__fact-label">Hectares of land;</p>
-                <p class="section-about-us__fact">897+</p>
-                <p class="section-about-us__fact-label">Employees;</p>
-                <p class="section-about-us__fact">1.500K</p>
-                <p class="section-about-us__fact-label">Bottles produced;</p>
-                <p class="section-about-us__fact">345 +</p>
-                <p class="section-about-us__fact-label">Tours per year;</p>
-                <p class="section-about-us__fact">9.000K</p>
-                <p class="section-about-us__fact-label">Visitors per year.</p>
-            </div>
+      <div class="section-about-us__contaiber">
+        <div class="section-about-us__content">
+          <h2 class="section-about-us__title">~ ABOUT US ~</h2>
+          <p class="section-about-us__description">
+            Wine is Poetry in a Bottle. Discover Our Wines.
+          </p>
+          <p class="section-about-us__text">
+            Our artisan winery located in Austin, Texas is committed to
+            producing delicious, interesting, well-balanced wines with the
+            complexity of flavors. Fruits from each vintage tell the story of
+            the season. We're dedicated to supporting sustainably farmed,
+            terroir expressive vineyards.
+          </p>
         </div>
-        <div class="section-about-us__video">
-            <img src="img/img_section_about_us/video-presentation.jpg" alt="Video Presentation">
+        <div class="section-about-us__info">
+          <p class="section-about-us__fact">15.000</p>
+          <p class="section-about-us__fact-label">Hectares of land;</p>
+          <p class="section-about-us__fact">897+</p>
+          <p class="section-about-us__fact-label">Employees;</p>
+          <p class="section-about-us__fact">1.500K</p>
+          <p class="section-about-us__fact-label">Bottles produced;</p>
+          <p class="section-about-us__fact">345 +</p>
+          <p class="section-about-us__fact-label">Tours per year;</p>
+          <p class="section-about-us__fact">9.000K</p>
+          <p class="section-about-us__fact-label">Visitors per year.</p>
         </div>
+      </div>
+      <div class="section-about-us__video">
+        <img
+          src="img/img_section_about_us/video-presentation.jpg"
+          alt="Video Presentation"
+        />
+      </div>
     </section>
-</body>
-
+  </body>
 </html>
