--- a/common.header-menu.partial.html
+++ b/common.header-menu.partial.html
@@ -48,7 +48,7 @@
                     </a>
                 </div>
                 <div class="header__menu-item">
-                    <a href="#" class="header__menu-link">
+                    <a href="contact_us.html" class="header__menu-link">
                         CONTACTS
                     </a>
                 </div>
