--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <section data-hx-trigger="load" data-hx-swap="outerHTML" data-hx-get="index.section-about-us.partial.html">
     </section>
 
-    <section data-hx-trigger="load" data-hx-swap="outerHTML" data-hx-get="index.section-gourmand-choice.partial.html">
+    <section data-hx-trigger="load" data-hx-swap="outerHTML" data-hx-get="index.section-gourman-choice.partial.html">
     </section>
 
     <!--Блок 4 | Гриців Альбіна-->
